# mmoreseqs-legacy

./: #stdout  ..gitignore.un~  .Makefile.bak  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  DOCUMENTATION  Makefile  NEWS  README  README.md  README.tmp  __init__.py.in  _clang-format  _clang-format-example  batch.sh  environment.yml  fb-pruner.sh  fbpruner-project.code-workspace  get_rpath.py  mmseqs_plus.sh  results.sorted.tsv  results.tsv  setup.py.in  test.txt
mmore/: .gitignore  CMakeLists.txt  ISSUES  LICENSE  README.md  configure.ac  make.txt
mmore/hmmer_out/: hmmer.0.0.hmmout  hmmer.0.1.hmmout  hmmer.0.10.hmmout  hmmer.0.11.hmmout  hmmer.0.12.hmmout  hmmer.0.2.hmmout  hmmer.0.3.hmmout  hmmer.0.4.hmmout  hmmer.0.5.hmmout  hmmer.0.6.hmmout  hmmer.0.7.hmmout  hmmer.0.8.hmmout  hmmer.0.9.hmmout  hmmer.1.0.hmmout  hmmer.1.1.hmmout  hmmer.1.10.hmmout  hmmer.1.11.hmmout  hmmer.1.12.hmmout  hmmer.1.2.hmmout  hmmer.1.3.hmmout  hmmer.1.4.hmmout  hmmer.1.5.hmmout  hmmer.1.6.hmmout  hmmer.1.7.hmmout  hmmer.1.8.hmmout  hmmer.1.9.hmmout  hmmer.2.0.hmmout  hmmer.2.1.hmmout  hmmer.2.10.hmmout  hmmer.2.11.hmmout  hmmer.2.12.hmmout  hmmer.2.2.hmmout  hmmer.2.3.hmmout  hmmer.2.4.hmmout  hmmer.2.5.hmmout  hmmer.2.6.hmmout  hmmer.2.7.hmmout  hmmer.2.8.hmmout  hmmer.2.9.hmmout  hmmer.3.0.hmmout  (+51 more)
mmore/my_make/: Makefile  Makefile.in  Makefile.save
mmore/my_make/test/: my_Makefile.make
mmore/old_src/: bound_fwdbck_linear (new WIP).c  bound_fwdbck_linear (old).c  bound_fwdbck_linear.c  bound_fwdbck_sparse (new WIP).c  bound_fwdbck_sparse (old).c  bound_fwdbck_sparse.c  bound_fwdbck_sparse_test.c  cloud_search_linear (new WIP).c  cloud_search_linear.c
mmore/scripts/: m8_add_ids.py
mmore/scripts/data-viz/: build_matrix_layered_edgebounds.py  make_layered_cloud.sh
mmore/scripts/dev/: build_vector_files.sh
mmore/scripts/workflows/: convert_fasta_to_hmm.sh  mmore-easysearch.sh  mmore-get-tools.sh  mmore-mmoresearch.sh  mmore-prep-new.sh  mmore-prep.sh  mmore-prepsearch.sh  mmore-search.sh  mmore.sh  mmoreseqs-mmseqssearch.sh  test_script.sh  test_workflow.sh
mmore/scripts/workflows/helpers/: convert_fasta-to-hmm.sh  mmore_functions.sh  mmore_get-tools.sh  mmore_make-tmp.sh  mmore_set-defaults.sh  split_fasta.py  split_hmm.py  translate_ids.sh
mmore/src/: application.c
mmore/src/algs/: _algs.h
mmore/src/algs_linear/: bound_fwdbck_linear.c  bound_fwdbck_linear.h  cloud_search_linear.c  cloud_search_linear.h  fwdback_linear.c  merge_reorient_linear.c  merge_reorient_linear.h  pruning_linear.c  pruning_linear.h  viterbi_linear.c  viterbi_traceback_linear.c  viterbi_traceback_linear.h
mmore/src/algs_naive/: bound_fwdbck_naive.c
mmore/src/algs_quad/: _algs_quad.h  bound_fwdbck_quad.c  bound_fwdbck_quad.h  bound_posterior_quad.c  bound_viterbi_quad.c  cloud_search_quad.c  cloud_search_quad.h  fwdback_quad.c  fwdback_quad.h  merge_reorient_quad.c  posterior_quad.c  pruning_quad.c  ranged_fwdback_quad.c  ranged_fwdback_quad.h  viterbi_quad.c  viterbi_quad.h  viterbi_traceback_quad.c  viterbi_traceback_quad.h
mmore/src/algs_sparse/: _algs_sparse.h  bound_fwdbck_sparse.c  bound_fwdbck_sparse.h  bound_fwdbck_sparse_test.c  bound_fwdbck_sparse_test.h  bound_viterbi_sparse.c  posterior_null2_sparse.c  posterior_sparse.c  posterior_traceback_sparse.c  posterior_traceback_sparse.h  viterbi_traceback_sparse.c  viterbi_traceback_sparse.h
mmore/src/algs_vectorized/: _algs_vectorized.h  fwdback_vectorized.c
mmore/src/macros/: _macros.h
mmore/src/objects/: _objects.h  alignment.c  alignment.h  arg_opts.c  arg_opts.h  args.c  clock.c  clock.h  commandline.c  commandline.h  domain_x.h  edgebound.c  edgebound.h  edgebound_rows.c  edgebound_rows.h  f_index.c  f_index.h  hmm_bg.c  hmm_bg.h  hmm_profile.c  hmm_profile.h  m8_results.c  m8_results.h  mystring.c  mystring.h  score_matrix.c  score_matrix.h  scriptrunner.c  scriptrunner.h  sequence.c  sequence.h  structs.c  structs.h  structs_buildopts.h  structs_consts.h  structs_macros.h  worker.c  worker.h  worker_thread.c
mmore/src/objects/basic/: _basic.h  bool.c  bool.h  bound.c  bound.h  char.c  char.h  double.c  double.h  float.c  float.h  gen.c  gen.h  gen_ext.c  int.c  int.h  ptr.c  ptr.h  range.c  range.h  str.c  str.h  str_ext.c  str_ext.h  template.c  template.h  trace.c  trace.h  xstr.c  xstr.h
mmore/src/objects/io/: _io.h  buffer.c  buffer.h  buffer_read.h  (+7 more)
mmore/src/parsers/: arg_parser.c  arg_parser.h  hmm_parser.c  index_parser.c  index_parser.h  m8_parser.c  m8_parser.h  seq_parser.c  seq_parser.h  seq_to_profile.c
mmore/src/pipelines/: _pipelines.h  pipeline_generic.c  pipeline_hmmbuild.c  pipeline_index.c  pipeline_interactive.c  pipeline_itest.c  pipeline_mmore.c  pipeline_mmore_easysearch.c  pipeline_mmore_main.c  pipeline_mmore_prep.c  pipeline_mmore_prepsearch.c  pipeline_mmore_search.c  pipeline_mmore_searchmmore.c  pipeline_mmore_searchmmseqs.c  pipeline_mmoreseqs_easysearch.c  pipeline_mmoreseqs_mmore.c  pipeline_mmoreseqs_prep.c  pipeline_null.c  pipeline_prep.c  workflow.c
mmore/src/reporting/: domtblout.c  hmmerout.c  hmmerout.h  m8out.c  mainout.c  mainout.h  myout.c  mythreshout.c  mythreshout.h  mytimeout.c  report_util.c
mmore/src/utilities/: _utilities.h  dp_matrix_util.c  dp_matrix_util.h  error_handler.c  error_handler.h  logmath.c  logmath.h  misc.c  mymath.c  mymath.h  statistics.c  statistics.h  system_io.c  system_io.h  testing.c  testing.h  visualizer.c
mmore/src/work/: _work.h  work_cloud_fwdback.c  work_cloud_merge.c  work_cloud_merge.h  work_cloud_search.c  work_etc.c  work_etc.h  work_fwdback.c  work_index.c  work_index.h  work_loader.c  work_loader.h  work_loop.c  work_maintenance.c  work_maintenance.h  work_optacc.c  work_posterior.c  work_posterior.h  work_posterior_bydom.c  work_report.c  work_scoring.c  work_scoring.h  work_scripting.c  work_sparse_mx.c  work_sparse_mx.h  work_threshold.c  work_threshold.h  work_viterbi.c
mmore/test_make/save/: funcs.h
mmore/test_make/src/: funcs.c  hello_world.c
old-stuff/: Makefile  Makefile.am  Makefile.old  posterior_quad.c
(+1928 files in other folders)
